planning sec wrap fix + testimonials square img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,12 @@
 
            /* MAIN  */
 
+   .plansec {
+    display: flex;
+    flex-wrap: wrap;
+   }
+
+
    .planning img {
     width: 100%;
     padding-bottom: 70px;
@@ -134,7 +140,7 @@
         font-size: 2rem;
         padding: 9px 10px;
         background-color: #9792e4;
-        margin: 20px 141px;
+        margin: 20px 42%;
     }
 
     .testimonial h2 {
@@ -151,7 +157,10 @@
     }
 
     .testimg img {
-     max-width: -webkit-fill-available;
+        width: 100%;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+        object-fit: cover;
     }
 
     .testcard p {
@@ -192,10 +201,6 @@
 
     #arrowplan {
         margin: 20px 46%;
-    }
-
-    #testcontainer {
-
     }
 
     .testcard {
@@ -252,7 +257,6 @@
     .margin70 {
         width: 70%;
         margin: auto;
-        display: flex;
     }
     
     div#phonecard {
@@ -271,6 +275,34 @@
 
    .plansec {
     margin: auto;
+    flex-wrap: nowrap;
    }
+
+   .testcard {
+    display: flex;
+    padding: 3% 5%;        
+    align-items: center;
+}
+
+.testimg img {
+    width: 100%;
+   }
+
+ .testcard p {
+    padding: 0%;
+
+ }
+ 
+ .testtext {
+    width: auto;
+    padding-left: 3%;
+ }
+
+.testcard h3 {
+    padding-top: 3%;
+    text-align: left;
+    padding-left: 3%;
+}
+
 
 }
